<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="@dimen/fss_margin_from_edge"
    android:layout_marginTop="@dimen/fragment_margin_top"
    android:layout_marginRight="@dimen/fss_grid_item_text_size"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
            android:id="@+id/set_number_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/fss_grid_item_text_size"
            android:text="@string/set_title"/>
    <EditText
            android:id="@+id/set_weight_edit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:textSize="@dimen/fss_grid_item_text_size"
            android:hint="@string/weight_title"/>
    <LinearLayout
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/set_rep_actual_edit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/fss_grid_title_text_size"
                android:hint="@string/rep_title"/>
        <TextView
                android:text="/"
                android:textSize="@dimen/fss_grid_item_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/set_rep_goal_edit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/fss_grid_title_text_size"
                android:hint="@string/rep_title"/>
    </LinearLayout>
</FrameLayout>