<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_marginTop="@dimen/fragment_margin_top"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fragment_title_size"
            android:gravity="center"
            android:text="@string/filler_text"/>
    <LinearLayout
            android:layout_marginTop="@dimen/fragment_margin_top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <FrameLayout
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/fss_grid_title_text_size"
                android:layout_marginLeft="@dimen/fss_margin_from_edge"
                android:text="@string/set_title"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center|top"
                android:textSize="@dimen/fss_grid_title_text_size"
                android:text="@string/weight_title"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/fss_grid_title_text_size"
                android:layout_marginRight="@dimen/fss_margin_from_edge"
                android:text="@string/rep_title"/>
        </FrameLayout>
        <ListView
            android:id="@+id/set_list"
            android:layout_marginLeft="@dimen/fss_margin_from_edge"
            android:layout_marginRight="@dimen/fss_grid_item_text_size"
            android:layout_gravity="bottom"
            tools:listitem="@layout/content_item_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_button"
            android:text="+"
            android:layout_gravity="left"
            android:background="@color/positiveGreen"
            android:layout_marginTop="@dimen/fragment_margin_top"
            android:layout_marginLeft="@dimen/fss_lg_margin_from_edge"
            android:layout_width="@dimen/fss_lg_button_wd"
            android:layout_height="@dimen/fss_lg_button_hi"/>
        <Button
                android:id="@+id/remove_button"
                android:text="X"
                android:layout_gravity="right"
                android:background="@color/negRed"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:layout_marginRight="@dimen/fss_lg_margin_from_edge"
                android:layout_width="@dimen/fss_lg_button_wd"
                android:layout_height="@dimen/fss_lg_button_hi"/>
    </FrameLayout>

</LinearLayout>